es5 or ECMA2009 prototype inheritance

--- a/objects/inheritance in javascript.html
+++ b/objects/inheritance in javascript.html
@@ -133,7 +133,7 @@ check it in ECMA2015_classes.js file-->
 </html>
 
 
-<!-- ************************* what i understaned **************************** -->
+<!-- ************************* what i understaned in prototype inheriteance**************************** -->
 
 <!--<!DOCTYPE html>
 <html lang="en">
@@ -168,7 +168,7 @@ check it in ECMA2015_classes.js file-->
             console.log(`Your name is:- ${this.name} \nYour age is:- ${this.age} \nYour gender is:- ${this.gender}`);
         }
         
-    // this line will create an object name rahul on the basises of the "function test()"  constructor by the given parameter. 
+    // this line will create an object name rahul on the basises of the "function test()"  constructor by the given parameter..... 
         let rahul = new test('rahul',22,'male','tv');
 
     </script>
